# GLAAP

./: CMakeLists.txt  README.md
doc/: Diagram
src/: main.cpp
src/engine/: core.hpp
src/engine/display/: background.cpp  background.hpp  display.hpp  drawable.hpp  window.cpp  window.hpp
src/engine/resources/: resources.hpp  textures.cpp  textures.hpp
src/test/: test.cpp  test.hpp
